appId: com.nekopilot.android.debug
---
- launchApp:
    clearState: true
- assertVisible: "添加第一个节点"

- openLink: "socks://127.0.0.1:1080#UngroupedNode"
- assertVisible: "导入配置"
- tapOn: "是"
- extendedWaitUntil:
    visible: "UngroupedNode"
    timeout: 5000

- tapOn: "更多选项"
- tapOn: "管理分组"
- tapOn: "创建分组"
- tapOn: "应用"
- extendedWaitUntil:
    visible: "My group"
    timeout: 5000
- back

- tapOn: "My group"
- openLink: "socks://127.0.0.1:1081#NamedGroupNode"
- assertVisible: "导入配置"
- tapOn: "是"
- extendedWaitUntil:
    visible: "NamedGroupNode"
    timeout: 5000

- tapOn: "未分组"
- extendedWaitUntil:
    visible: "UngroupedNode"
    timeout: 5000
- tapOn: "My group"
- extendedWaitUntil:
    visible: "NamedGroupNode"
    timeout: 5000

- stopApp
- launchApp
- extendedWaitUntil:
    visible: "My group"
    timeout: 5000
- extendedWaitUntil:
    visible: "NamedGroupNode"
    timeout: 5000
- assertNotVisible: "添加第一个节点"
